* 0.6.7svn - ... - release 14/03/2008
- Added improved tick patch (Kelly Long)
- Show milliseconds in dstat_time when using --debug cfr. dstat_epoch
- Difference in integer rounding should not affect colouring
- Fixed the IOError when terminal is suspended and IO is unbuffered. (Dbt 309953)

* 0.6.7 - Cambridge overdue - released 26/02/2008
- Only rewrite xterm title when XTERM_SHELL is set to bash
- Added more Dbt (Debian bug tracker) ids in the ChangeLog and TODO
- Use sys.exit() instead of exit() before color support is detected
- Renamed external dstat_app plugin to dstat_topcpu
- Added external dstat_topmem plugin
- Improved dstat_topcpu CSV output
- Fixed a problem with asciidoc DocBook output (Dbt 427214, Michael Ablassmeier)
- Report when python-curses is missing and colors don't work (eg. on OpenSUSE)
- Improve --version output wrt. terminal and color support
- Fixed a few inaccuracies in the man page (John Goggan)
- Fixed opening vanished files in /proc in dstat_topcpu
- Fixed formatting bug in dstat_topcpu
- Added external dstat_mysql_* and dstat_innodb_* plugins
- Added greppipe() and matchpipe() to improve performance on pipe-handling
- Added external dstat_topio and dstat_topbio plugins
- Added external dstat_topoom plugin to show top out-of-memory score
- Added external dstat_mysql5_* plugins (Frederic Descamps)
- Reinstated the use of -D md0 which got lost (Peter Rabbitson)
- Improvement to cpufreq module for SMP systems (Bert de Bruijn)
- Added VMware ESX dstat_vmknic plugin (Bert de Bruijn)
- Added infrastructure to allow C plugins

* 0.6.6 - Unemployed - released 28/04/2007
- Removed SwapCached from the Cached counter (Dbt 418326, Peter Rabbitson)
- Fixed a file descriptor problem on kernel 2.4 (Liviu Daia)
- Install manpage as part of the make install phase (Scott Baker)
- Use SIG_IGN instead of SIG_DFL to disable alarm signal
- Improved dev() for kernel 2.4 device names (Dbt 377199, Filippo Giunchedi)